# ScriptDownloader

backend/: .env  Cargo.toml  setup4.txt
backend/migrations/2022-09-04-162900_create_instalation/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
frontend/: Cargo.toml  Trunk.toml  index.html  setups.txt
frontend/src/: lib.rs  router.rs
frontend/src/pages/: home.rs  item.rs  login.rs  mod.rs  setup_page.rs  store.rs
