[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
cargo-watch = "8.1.2"
ssh2 = "0.9.3"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.133"
serde_json = "1.0.85"
