[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
# gloo-net = "0.2"
gloo = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
reqwasm = "0.5.0"
web-sys = "0.3.59"
serde_json = "1.0.85"
wasm-bindgen = "0.2.83"
yewdux = "0.7.0"
yewdux-functional = "0.1.0"
